# nzflow-qubo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: reproduce_table1.py
nzflow_qubo/: __init__.py  benchmarks.py  enumerator.py  graph.py  hamiltonian.py  snarks.py  solvers.py
scripts/: generate_paper_tables.py
tests/: test_correctness.py
