[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nzflow-qubo"
version = "0.1.0"
description = "QUBO formulation for nowhere-zero k-flows on graphs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ali Lotfi", email = "ali.lotfi@usask.ca" },
]
dependencies = [
    "dimod>=0.12",
    "dwave-neal>=0.6",
]

[project.optional-dependencies]
qpu = ["dwave-system>=1.20"]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["nzflow_qubo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
