[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nzflow-qubo"
version = "0.1.0"
description = "QUBO formulation for nowhere-zero k-flows on graphs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ali Lotfi", email = "all054@usask.ca" },
    { name = "Adam Carter", email = "adam.carter@usask.ca" },
    { name = "Mohammad Meysami", email = "mohammad-meysami@utulsa.edu" },
    { name = "Thuan Ha", email = "thuan.ha@usask.ca" },
    { name = "Kwabena Abrefa Nketia", email = "kwabena.nketia@usask.ca" },
    { name = "Steven J. Shirtliffe", email = "steve.shirtliffe@usask.ca" },
    { name = "Steven Rayan", email = "rayan@math.usask.ca" },
]
dependencies = [
    "dimod>=0.12",
    "dwave-neal>=0.6",
]

[project.optional-dependencies]
qpu = ["dwave-system>=1.20"]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["nzflow_qubo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
